<resources>
    <string name="app_name">Debtors</string>

    <string name="nav_header_for_me">Your money in debtors: </string>
    <string name="nav_header_me_to_other">Your debts in others: </string>


    <string name="nav_all_clients">All Clients</string>
    <string name="nav_debtors">Debtors</string>
    <string name="nav_transactions">Transactions</string>
    <string name="nav_payments">Payments</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_me">About me</string>

    <string name="tag_allclients">AllClients</string>
    <string name="tag_debtors">Debtors</string>
    <string name="tag_transactions">Transactions</string>
    <string name="tag_payments">Payments</string>
    <string name="tag_clientinfo">ClientInfo</string>
    <string name="tag_settings">Settings</string>

    <string name="tag_debtors_forme">DebtorsForMe</string>
    <string name="tag_debtors_metoother">DebtorsMeToOther</string>
    
    <string name="tag_transactions_all">TransactionsAll</string>
    <string name="tag_transactions_sales">TransactionsSales</string>
    <string name="tag_transactions_purchases">TransactionsPurchases</string>
    
    <string name="tag_payments_all">PaymentsAll</string>
    <string name="tag_payments_received">PaymentsReceived</string>
    <string name="tag_payments_given">PaymentsGiven</string>

    <string name="tag_clientinfo_payments">ClientInfoPayments</string>
    <string name="tag_clientinfo_transactions">ClientInfoTransactions</string>


    <!--<string name=""-->

    <string-array name="nav_item_toolbar_title">
        <item>All Clients</item>
        <item>Debtors</item>
        <item>Transactions</item>
        <item>Payments</item>
        <!--<item>Client Info</item>-->
        <item>Settings</item>
        <!--<item>About me</item>-->
    </string-array>
    <string name="menu_filter">Filter</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_amount">Sort by amount</string>
    <string name="sort_by_quantity">Sort by quantity</string>
    <string name="sort_by_date">Sort by date</string>
    w
    <!--MENU TRANSACTION-->
    <string name="menu_transaction_min_date">From date</string>
    <string name="menu_transaction_max_date">To date</string>
    <string name="menu_transaction_min_quantity">Minimum quantity</string>
    <string name="menu_transaction_max_quantity">Maximum quantity</string>
    <string name="menu_transaction_min_total_amount">Minimum total amount</string>
    <string name="menu_transaction_max_total_amount">Maximum total amount</string>
    <!--MENU PAYMENTS-->
    <string name="menu_min_date">From date</string>
    <string name="menu_max_date">To date</string>
    <string name="menu_min_amount">Minimum amount</string>
    <string name="menu_max_amount">Maximum amount</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--MENU MAIN DEBTS-->
    <!--TODO sort by name, amount, show under amount, above amount-->
    <!--<string name="menu_debtors_sort_"-->
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="activity_name_settings">Settings</string>
    <string name="activity_name_aboutMe">About me</string>

    <string name="view_pager_debtors_me_to_other">Me to other</string>
    <string name="view_pager_debtors_for_me">For me</string>

    <string name="search_title">Search client</string>

    <string name="dialog_payment_toggle_received">Received</string>
    <string name="dialog_payment_toggle_given">Given</string>

    <string name="dialog_transaction_toggle_purchase">Purchase</string>
    <string name="dialog_transaction_toggle_sale">Sale</string>

    <string name="dialog_menu_date_from">From date</string>
    <string name="dialog_menu_date_to">To date</string>
    <string name="dialog_menu_newclientdebtors_range">Left amount range</string>

    <string name="dialog_menu_payments_amount_range">Payments range</string>

    <string name="dialog_menu_transactions_totalamount_range">Total amount range</string>
    <string name="dialog_menu_transactions_quantity_range">Quantity range</string>



    <!--<string name="dialog_newclient_menu_error"></string>-->
</resources>
