<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_all_clients"
        android:title="@string/nav_all_clients" />
    <!--android:icon="@drawable/ic_home_black_24dp"-->


    <item
        android:id="@+id/nav_debtors"
        android:title="@string/nav_debtors" />
    <!--android:icon="@drawable/ic_photo_library_black_24dp"-->

    <item
        android:id="@+id/nav_transactions"
        android:title="@string/nav_transactions" />
    <!--android:icon="@drawable/ic_local_movies_black_24dp"-->


    <item
        android:id="@+id/nav_payments"
        android:title="@string/nav_payments" />
    <!--android:icon="@drawable/ic_notifications_black_24dp"-->





</group>

<item android:title="Other">
    <menu>

        <item
            android:id="@+id/nav_about_me"
            android:title="@string/nav_about_me" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings" />
        android:icon="@drawable/ic_settings_black_24dp"

    </menu>
</item>

</menu>