<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_clientinfo_edit"
        android:orderInCategory="198"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_clientinfo_delete"
        android:orderInCategory="199"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_clientinfo_filter"
        android:orderInCategory="200"
        android:title="@string/menu_filter"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_clientinfo_sort_by_name"
        android:orderInCategory="201"
        android:title="@string/sort_by_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_clientinfo_sort_by_amount"
        android:orderInCategory="202"
        android:title="@string/sort_by_amount"
        app:showAsAction="never" />


</menu>